# pyxpenses

./: .gitignore  .gitignore-base  .pre-commit-config.yaml  README.md  parsed.db  pyproject.toml  starter.sh
api-test/: .gitignore  database.sqlite3
api-test/backend/: .gitignore  pyproject.toml
api-test/backend/app/: main.py
api-test/backend/app/database/: database.py  user_repository.py
api-test/frontend/: .gitignore  package.json
btc-schedule/: main.py  pyproject.toml
game-of-life/: board.py  cell.py  main.py  pyproject.toml
news_parser/: README.md  main.py  parser.py  pyproject.toml  utils.py
news_parser/db/: article.py  database.py
pyker/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  card.py  deck.py  main.py  mypy.ini  player.py  pyproject.toml  table.py
pyker/app/core/: card.py  dealer.py  deck.py  player.py  table.py
pyker/app/core/player/: hand.py  player.py  wallet.py
pyker/app/games/blackjack/: blackjack.py  readme.md
pyker/app/utils/: __init__.py  id.py
pyker/core/: deck.py  player.py
pyker/docs/: conf.py  diagrams.rst  index.rst  modules.rst
pyker/docs/source/: conf.py  index.rst
pyker/scripts/: generate_docs.py
pyker/tests/core/: test_card.py  test_dealer.py  test_deck.py  test_player.py  test_table.py
pyker/tests/core/player/: test_player.py
pyker/tests/utils/: test_id.py
pymg-optimizer/: .gitignore  file.py  main.py  processes.py  pyproject.toml
sqlite_personal_tracker/: db.py  expenses.py  main.py
sqlite_personal_tracker/expense/: expense.py  expenses.py  expenses_repository.py
(+2 files in other folders)
